force-app/main/default/objects/QuoteLineItem/fields/alternate_heading__c.field-meta.xml
<CustomField>
    <fullName>alternate_heading__c</fullName>
    <label>Alternate Heading</label>
    <length>80</length>
    <type>Text</type>
</CustomField>