force-app/main/default/objects/QuoteLineItem/fields/Data_Migration_Conversion_Key__c.field-meta.xml
<CustomField>
    <fullName>Data_Migration_Conversion_Key__c</fullName>
    <description>Represents the primary key for the record from the source system.</description>
    <externalId>true</externalId>
    <label>Data Migration Conversion Key</label>
    <length>50</length>
    <type>Text</type>
</CustomField>