force-app/main/default/objects/QuoteLineItem/fields/display_price__c.field-meta.xml
<CustomField>
    <fullName>display_price__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display Price</label>
    <type>Checkbox</type>
</CustomField>