force-app/main/default/objects/QuoteLineItem/fields/Experlogix_Avatax__c.field-meta.xml
<CustomField>
    <fullName>Experlogix_Avatax__c</fullName>
    <description>Used to store tax on line items for Experlogix</description>
    <label>Experlogix Avatax</label>
    <length>25</length>
    <type>Text</type>
</CustomField>