force-app/main/default/objects/QuoteLineItem/fields/experlogix_category__c.field-meta.xml
<CustomField>
    <fullName>experlogix_category__c</fullName>
    <label>Experlogix Category</label>
    <length>80</length>
    <type>Text</type>
</CustomField>