force-app/main/default/objects/QuoteLineItem/fields/experlogix_optionid_sequence_no__c.field-meta.xml
<CustomField>
    <fullName>experlogix_optionid_sequence_no__c</fullName>
    <label>Experlogix Option ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>