force-app/main/default/objects/QuoteLineItem/fields/LineNumber__c.field-meta.xml
<CustomField>
    <fullName>LineNumber__c</fullName>
    <description>Experlogix Config Number</description>
    <label>Experlogix Config Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>