force-app/main/default/objects/QuoteLineItem/fields/Price_Difference__c.field-meta.xml
<CustomField>
    <fullName>Price_Difference__c</fullName>
    <formula>IF(
TEXT( ROUND(PricebookEntry.UnitPrice,2))== TEXT( ROUND( UnitPrice,2)),&quot; &quot;,
IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;red&quot;)
)</formula>
    <label>Price Difference</label>
    <type>Text</type>
</CustomField>