force-app/main/default/objects/QuoteLineItem/fields/product_display__c.field-meta.xml
<CustomField>
    <fullName>product_display__c</fullName>
    <label>Product Display</label>
    <length>80</length>
    <type>Text</type>
</CustomField>